@@ -1,13 +1,128 @@
 package diskio
 
 import (
+	"encoding/json"
 	"testing"
 	"time"
+
+	"github.com/elastic/beats/metricbeat/module/docker"
+
+	dc "github.com/fsouza/go-dockerclient"
 )
 
 var blkioService BLkioService
 var oldBlkioRaw = make([]BlkioRaw, 3)
 var newBlkioRaw = make([]BlkioRaw, 3)
+
+func TestDeltaMultipleContainers(t *testing.T) {
+	var apiContainer1 docker.Stat
+	var apiContainer2 docker.Stat
+	metrics := dc.BlkioStatsEntry{
+		Major: 123,
+		Minor: 123,
+		Op:    "Total",
+		Value: 123,
+	}
+	jsonContainers := `[
+     {
+             "Id": "8dfafdbc3a40",
+			 "Names": ["container"]
+     },{
+             "Id": "8dfafdbc3a41",
+			 "Names": ["container1"]
+     }]`
+	var containers []dc.APIContainers
+	err := json.Unmarshal([]byte(jsonContainers), &containers)
+	if err != nil {
+		t.Fatal(err)
+	}
+
+	apiContainer1.Stats.Read = time.Now()
+	apiContainer1.Container = containers[0]
+	apiContainer1.Stats.BlkioStats.IOServicedRecursive = append(apiContainer1.Stats.BlkioStats.IOServicedRecursive, metrics)
+	apiContainer2.Stats.Read = time.Now()
+	apiContainer2.Container = containers[1]
+	apiContainer2.Stats.BlkioStats.IOServicedRecursive = append(apiContainer2.Stats.BlkioStats.IOServicedRecursive, metrics)
+	dockerStats := []docker.Stat{apiContainer1, apiContainer2}
+	stats := blkioService.getBlkioStatsList(dockerStats)
+	totals := make([]float64, 2)
+	for _, stat := range stats {
+		totals[0] = stat.totals
+	}
+
+	dockerStats[0].Stats.BlkioStats.IOServicedRecursive[0].Value = 1000
+	dockerStats[0].Stats.Read = dockerStats[0].Stats.Read.Add(time.Second * 10)
+	dockerStats[1].Stats.BlkioStats.IOServicedRecursive[0].Value = 1000
+	dockerStats[1].Stats.Read = dockerStats[0].Stats.Read.Add(time.Second * 10)
+	stats = blkioService.getBlkioStatsList(dockerStats)
+	for _, stat := range stats {
+		totals[1] = stat.totals
+		if stat.totals < totals[0] {
+			t.Errorf("getBlkioStatsList(%v) => %v, want value bigger than %v", dockerStats, stat.totals, totals[0])
+		}
+	}
+
+	dockerStats[0].Stats.Read = dockerStats[0].Stats.Read.Add(time.Second * 15)
+	dockerStats[0].Stats.BlkioStats.IOServicedRecursive[0].Value = 2000
+	dockerStats[1].Stats.BlkioStats.IOServicedRecursive[0].Value = 2000
+	dockerStats[1].Stats.Read = dockerStats[0].Stats.Read.Add(time.Second * 15)
+	stats = blkioService.getBlkioStatsList(dockerStats)
+	for _, stat := range stats {
+		if stat.totals < totals[1] || stat.totals < totals[0] {
+			t.Errorf("getBlkioStatsList(%v) => %v, want value bigger than %v", dockerStats, stat.totals, totals[1])
+		}
+	}
+
+}
+
+func TestDeltaOneContainer(t *testing.T) {
+	var apiContainer docker.Stat
+	metrics := dc.BlkioStatsEntry{
+		Major: 123,
+		Minor: 123,
+		Op:    "Total",
+		Value: 123,
+	}
+	jsonContainers := `
+     {
+             "Id": "8dfafdbc3a40",
+			 "Names": ["container"]
+     }`
+	var containers dc.APIContainers
+	err := json.Unmarshal([]byte(jsonContainers), &containers)
+	if err != nil {
+		t.Fatal(err)
+	}
+
+	apiContainer.Stats.Read = time.Now()
+	apiContainer.Container = containers
+	apiContainer.Stats.BlkioStats.IOServicedRecursive = append(apiContainer.Stats.BlkioStats.IOServicedRecursive, metrics)
+	dockerStats := []docker.Stat{apiContainer}
+	stats := blkioService.getBlkioStatsList(dockerStats)
+	totals := make([]float64, 2)
+	for _, stat := range stats {
+		totals[0] = stat.totals
+	}
+
+	dockerStats[0].Stats.BlkioStats.IOServicedRecursive[0].Value = 1000
+	dockerStats[0].Stats.Read = dockerStats[0].Stats.Read.Add(time.Second * 10)
+	stats = blkioService.getBlkioStatsList(dockerStats)
+	for _, stat := range stats {
+		if stat.totals < totals[0] {
+			t.Errorf("getBlkioStatsList(%v) => %v, want value bigger than %v", dockerStats, stat.totals, totals[0])
+		}
+	}
+
+	dockerStats[0].Stats.BlkioStats.IOServicedRecursive[0].Value = 2000
+	dockerStats[0].Stats.Read = dockerStats[0].Stats.Read.Add(time.Second * 15)
+	stats = blkioService.getBlkioStatsList(dockerStats)
+	for _, stat := range stats {
+		if stat.totals < totals[1] || stat.totals < totals[0] {
+			t.Errorf("getBlkioStatsList(%v) => %v, want value bigger than %v", dockerStats, stat.totals, totals[1])
+		}
+	}
+
+}
 
 func TestWritePs(t *testing.T) {
 	oldWritePs := []uint64{220, 951, 0}
